--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>tmaxx-fin-data</module>
-        <module>tmaxx-fin-services</module>
+        <module>tmaxx-fin-dto</module>
         <module>tmaxx-fin-rest</module>
     </modules>
     <dependencyManagement>
@@ -44,6 +43,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
+        <springfox-swagger.version>2.7.0</springfox-swagger.version>
     </properties>
 
     <dependencies>
