--- a/tmaxx-fin-rest/pom.xml
+++ b/tmaxx-fin-rest/pom.xml
@@ -14,13 +14,13 @@
 
     <properties>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
-        <springfox-swagger.version>2.7.0</springfox-swagger.version>
+
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.xinerji</groupId>
-            <artifactId>tmaxx-fin-services</artifactId>
+            <artifactId>tmaxx-fin-dto</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
