--- a/tmaxx-fin-rest/src/main/resources/application.yml
+++ b/tmaxx-fin-rest/src/main/resources/application.yml
@@ -10,7 +10,9 @@ xinerji:
     username: postgres
     password: x1n3rj1xnrj
     driver: org.postgresql.Driver
-
+  jwt:
+    secret: JWTSuperSecretKey
+    expirationInMs: 604800000
 
 ---
 spring:
@@ -25,6 +27,9 @@ xinerji:
     username: postgres
     password: x1n3rj1xnrj
     driver: org.postgresql.Driver
+  jwt:
+    secret: JWTSuperSecretKey
+    expirationInMs: 604800000
     
 ---
 spring:
@@ -39,3 +44,6 @@ xinerji:
     username: postgres
     password: x1n3rj1xnrj
     driver: org.postgresql.Driver
+  jwt:
+    secret: JWTSuperSecretKey
+    expirationInMs: 604800000
